--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,19 +1,23 @@
 name: Docker Image CI
 
 on:
- create
+ push:
+    branches: [ "main" ]
+ pull_request:
+    branches: [ "main" ]
 
 jobs:
 
-  job1:
-    runs-on: node.js
+  eslint:
+    runs-on: ubuntu-latest
     steps:
-      - run: npm init @eslint/config
+      - uses: actions/checkout@v1
+      - uses: stefanoeb/eslint-action@1.0.2
       
   push_to_registry:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
-        needs:[job1]
+        needs:[eslint]
 
     steps:
       - name: Check out the repo
