--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,14 +1,18 @@
 name: Docker Image CI
 
 on:
- create
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
 
   job1:
-    runs-on: node.js
+    runs-on: ubuntu-latest
     steps:
-      - run: npm init @eslint/config
+      - uses: actions/checkout@v1
+      - uses: stefanoeb/eslint-action@1.0.2
       
   push_to_registry:
     name: Push Docker image to Docker Hub
