--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,11 @@ on:
 
 jobs:
 
+  job1:
+      runs-on: ubuntu-latest
+      steps:
+        - uses: actions/checkout@v1
+        - uses: stefanoeb/eslint-action@1.0.2
       
   push_to_registry:
     name: Push Docker image to Docker Hub
